--- a/level1/tutorial3.html
+++ b/level1/tutorial3.html
@@ -5,15 +5,58 @@
   <meta name="description" content="layout">
   <meta name="viewport" content="width=device-width">
   <title>チュートリアル３</title>
-  <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
+  <link rel="stylesheet" media="all" href="../css/style.css">
+  <link href="../code-prettify/prettify.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="../code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </head>
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
+    <div class="header">
+      <div class="cp_navi">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">初心者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+                <li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+                <li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+                <li><a href="../level1/css.html">CSSについて</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">中級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level2/design.html">デザインとは</a></li>
+                <li><a href="../level2/layout.html">レイアウト1</a></li>
+                <li><a href="../level2/layout2.html">レイアウト2</a></li>
+                <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/responsive.html">レスポンシブ</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">上級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level3/deploy.html">デプロイ</a></li>
+                <li><a href="../level3/seo.html">SEO</a></li>
+                <li><a href="../level3/marketing.html">マーケティング</a></li>
+                <li><a href="../level3/idea.html">アイデア</a></li>
+                <li><a href="../level3/law.html">法律</a></li>
+                <li><a href="../level3/history.html">歴史</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div id="sidebar">
       <div id="sidebarWrap">
@@ -28,8 +71,8 @@
               <li><a href="#sec03">リッチスニペット</a></li>
             </ul>
             <ul id="sns">
-              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
+              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
+              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="../images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
             </ul>
           </div>
         </nav>
@@ -55,7 +98,7 @@
         </header>
 
         <div class="innerS">
-            <img src="images/z2.png">
+            <img src="../images/z2.png">
             <p>htmlはWebページを作るための言語の一つですが、マークアップ言語であるhtmlは、その名の通りマーク＝『タグ』をつけることで、文章の構造を表現します。ebページを右クリックして「ソースの表示」を選ぶと「<」と「>」で囲まれた部分が『タグ』です。タグの記述方法にはルールがありますが、いくつか覚えれば簡単にWebページが作成できます。</p>
 
             <h3>10個の覚えておきたいタグ</h3>
@@ -155,6 +198,16 @@
 &lt;script src="script.js"&gt;  &lt;/script&gt;</pre>
         </div>
       </section>
+
+      <div class="nav-links">
+        <a class="prev page-numbers" href="tutorial2.html">«</a><!-- 現在の前のページへのリンク -->
+        <a class="page-numbers" href="tutorial1.html">1</a>
+        <a class="page-numbers" href="tutorial2.html">2</a>
+        <span class="page-numbers current" href="tutorial3.html">3</span>
+        <a class="page-numbers" href="css.html">4</a>
+        <a class="next page-numbers" href="css.html">»</a><!-- 現在の次のページへのリンク -->
+      </div>
+
 
     </div>
       <div class="end">
