--- a/level2/design.html
+++ b/level2/design.html
@@ -5,15 +5,58 @@
   <meta name="description" content="layout">
   <meta name="viewport" content="width=device-width">
   <title>デザイン</title>
-  <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
+  <link rel="stylesheet" media="all" href="../css/style.css">
+  <link href="../code-prettify/prettify.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="../code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </head>
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
+    <div class="header">
+      <div class="cp_navi">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">初心者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+                <li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+                <li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+                <li><a href="../level1/css.html">CSSについて</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">中級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level2/design.html">デザインとは</a></li>
+                <li><a href="../level2/layout.html">レイアウト1</a></li>
+                <li><a href="../level2/layout2.html">レイアウト2</a></li>
+                <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/responsive.html">レスポンシブ</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">上級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level3/deploy.html">デプロイ</a></li>
+                <li><a href="../level3/seo.html">SEO</a></li>
+                <li><a href="../level3/marketing.html">マーケティング</a></li>
+                <li><a href="../level3/idea.html">アイデア</a></li>
+                <li><a href="../level3/law.html">法律</a></li>
+                <li><a href="../level3/history.html">歴史</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div id="sidebar">
       <div id="sidebarWrap">
@@ -29,8 +72,8 @@
               <li><a href="#sec04">文字の大きさ</a></li>
             </ul>
             <ul id="sns">
-              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
+              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
+              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="../images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
             </ul>
           </div>
         </nav>
@@ -86,8 +129,7 @@
           <pre class="prettyprint linenums">
 p{
   font-family: フォント名;
-}
-          </pre>
+}</pre>
           <p>フォント名の部分にはserifやsans-serifなど、使いたいフォントによって書き換えます。</p>
 
           <h4>複数のフォントの指定</h4>
@@ -112,22 +154,22 @@ p{
           <p>上記のフォント以外にもフォントの種類はたくさんあります。その中のいくつかを、企業のロゴを使ってみていこうと思います</p>
           <div class="inner">
             <div class="article">
-              <img src="images/domino.png" width="370" height="224" alt="">
+              <img src="../images/domino.png" width="370" height="224" alt="">
               <p></p>
             </div>
             <div class="article">
-              <img src="images/supreme.png" width="370" height="224" alt="">
+              <img src="../images/supreme.png" width="370" height="224" alt="">
               <p>Futura 「futura」は円と直線の組み合わせでできています。王道感と今っぽさを両方出すことができるため様々な業界のロゴに使われています。</p>
             </div>
           </div>
 
           <div class="inner">
             <div class="article">
-              <img src="images/muji.png" width="370" height="224" alt="">
+              <img src="../images/muji.png" width="370" height="224" alt="">
               <p></p>
             </div>
             <div class="article">
-              <img src="images/panasonic.png" width="370" height="224" alt="">
+              <img src="../images/panasonic.png" width="370" height="224" alt="">
               <p>Helvetica「Helvetica」は簡潔で個性が抑えられたフォントであり、汎用性が高く、個性が抑えられているので読みやすいです。</p>
             </div>
           </div>
@@ -148,12 +190,12 @@ p{
             <ul class="col7">
               <li>
                 <p><h4> <行間を意識せず作った場合> </h4></p>
-                <p class="img"><img src="images/gyoukan1.png" width="370" height="224" alt=""></p>
+                <p class="img"><img src="../images/gyoukan1.png" width="370" height="224" alt=""></p>
 
               </li>
               <li>
                 <p><h4> <行間を意識して作った場合></h4></p>
-                <p class="img"><img src="images/gyoukan2.png" width="370" height="224" alt=""></p>
+                <p class="img"><img src="../images/gyoukan2.png" width="370" height="224" alt=""></p>
 
               </li>
             </ul>
@@ -181,14 +223,17 @@ p{
         </div>
       </section>
 
+      <div class="nav-links">
+        <span class="page-numbers current" href="design.html">1</span>
+        <a class="page-numbers" href="layout.html">2</a>
+        <a class="page-numbers" href="layout2.html">3</a>
+        <a class="page-numbers" href="layout3.html">4</a>
+        <a class="page-numbers" href="responsive.html">5</a>
+        <a class="next page-numbers" href="layout.html">»</a><!-- 現在の次のページへのリンク -->
+      </div>
+
     </div>
 
-    <div class="end">
-      <ul>
-        <li><a href="layout.html">レイアウト</a></li>
-      </ul>
-    </div>
-    
   </div>
 
 </body>
