--- a/level2/layout2.html
+++ b/level2/layout2.html
@@ -5,15 +5,59 @@
   <meta name="description" content="layout">
   <meta name="viewport" content="width=device-width">
   <title>ホームページのパーツの名称</title>
-  <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
+  <link rel="stylesheet" media="all" href="../css/style.css">
+  <link href="../code-prettify/prettify.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="../code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </head>
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
+    
+    <div class="header">
+      <div class="cp_navi">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">初心者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+                <li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+                <li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+                <li><a href="../level1/css.html">CSSについて</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">中級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level2/design.html">デザインとは</a></li>
+                <li><a href="../level2/layout.html">レイアウト1</a></li>
+                <li><a href="../level2/layout2.html">レイアウト2</a></li>
+                <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/responsive.html">レスポンシブ</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">上級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level3/deploy.html">デプロイ</a></li>
+                <li><a href="../level3/seo.html">SEO</a></li>
+                <li><a href="../level3/marketing.html">マーケティング</a></li>
+                <li><a href="../level3/idea.html">アイデア</a></li>
+                <li><a href="../level3/law.html">法律</a></li>
+                <li><a href="../level3/history.html">歴史</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div id="sidebar">
       <div id="sidebarWrap">
@@ -31,10 +75,10 @@
 
             </ul>
             <ul id="sns">
-              <li><a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a></li>
-              <li><a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-              <li><a href="#" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
-              <li><a href="#" target="_blank"><img src="images/iconYouTube.png" width="20" height="20" alt="You Tube"></a></li>
+              <li><a href="#" target="_blank"><img src="../images/iconFb.png" width="20" height="20" alt="FB"></a></li>
+              <li><a href="#" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
+              <li><a href="#" target="_blank"><img src="../images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
+              <li><a href="#" target="_blank"><img src="../images/iconYouTube.png" width="20" height="20" alt="You Tube"></a></li>
             </ul>
           </div>
         </nav>
@@ -101,7 +145,7 @@
 
           <pre class="prettyprint linenums">
 header{
-  displey:flex;
+  display: flex;
   width:100%;
   height:100px;
   background-color: darkgrey;
@@ -127,7 +171,7 @@ header{
             <li>「display:inline-box」で、メニュー項目を横並びで表示させます。</li>
           </ul>
           <h2>ヘッダー完成例</h2>
-          <p class="img"><img src="images/ヘッダー完成例.jpeg"  alt="ヘッダー完成例"></p>
+          <p class="img"><img src="../images/ヘッダー完成例.jpeg"  alt="ヘッダー完成例"></p>
         </div>
 
       </section>
@@ -137,7 +181,7 @@ header{
           <h2><span>ナビゲーション</span></h2>
         </header>
          <div class="innerS">
-          <p><img src="images/ナビゲーション.jpeg" alt="ナビゲーション例"></p>
+          <p><img src="../images/ナビゲーション.jpeg" alt="ナビゲーション例"></p>
           <p>人によって「メニュー」と呼ぶこともあります。開発用語では「ナビゲーション」が一般的になります。大きな目次を「グローバルナビゲーション」、小さな目次を「サブナビゲーション」と呼びます。ユーザーを目的のコンテンツに誘導することや、検索エンジンににアピールすることができます。</p>
 
               <h2>ナビゲーションの作り方</h2>
@@ -197,7 +241,7 @@ nav ul li a {
             </ul>
 
             <h2>ナビゲーション完成例</h2>
-            <p class="img"><img src="images/ナビゲーション完成例.jpeg"  alt="ナビゲーション完成例"></p>
+            <p class="img"><img src="../images/ナビゲーション完成例.jpeg"  alt="ナビゲーション完成例"></p>
 
         </div>
       </section>
@@ -208,7 +252,7 @@ nav ul li a {
         </header>
         <div class="inner">
           <div class="article">
-            <img src="images/コンテンツ.jpeg" width="370" height="224" alt="コンテンツ例">
+            <img src="../images/コンテンツ.jpeg" width="370" height="224" alt="コンテンツ例">
             <p>ページ内のメインとなる要素の部分です。基本的にホームページの訪問者はこの内容を目当てに来るので、コンテンツが見えやすいようにヘッダーやナビゲーションを一時的に隠すこともあります。</p>
           </div>
         </div>
@@ -221,7 +265,7 @@ nav ul li a {
         </header>
         <div class="inner">
           <div class="article">
-            <img src="images/サイドバー.jpeg" width="370" height="224" alt="サイドバー例">
+            <img src="../images/サイドバー.jpeg" width="370" height="224" alt="サイドバー例">
             <p>コンテンツの隣に、カテゴリ一覧や関連の記事一覧、広告バナーなどを設置したりする際にとるエリアをサイドバーと呼んでいます。サイドバーを設置するとユーザーはサイドバーから知りたい情報に簡単に辿り着くことができます。また問い合わせのフォームなどと合わせることによって、ユーザーによる商品購入や資料請求などの行動に繋げることができます。</p>
           </div>
         </div>
@@ -286,7 +330,7 @@ article {
             <li>親要素に「display:flex;」を指定し、固定して追従させたい箇所に、CSSで「position: sticky」とコーディングすれば、サイドバーを固定することができます。</li>
           </ul>
           <h2>サイドバー完成例</h2>
-          <p class="img"><img src="images/サイドバー完成例.jpeg"  alt="サイドバー完成例"></p>
+          <p class="img"><img src="../images/サイドバー完成例.jpeg"  alt="サイドバー完成例"></p>
         </div>
       </section>
 
@@ -365,10 +409,21 @@ article {
           <br>
 
           <h2>フッター完成例</h2>
-          <p class="img"><img src="images/フッター完成例.jpeg"  alt="フッター完成例"></p>
+          <p class="img"><img src="../images/フッター完成例.jpeg"  alt="フッター完成例"></p>
         </div>
 
       </section>
+
+      <div class="nav-links">
+        <a class="prev page-numbers" href="layout.htmll">«</a><!-- 現在の前のページへのリンク -->
+        <a class="page-numbers" href="design.html">1</a>
+        <a class="page-numbers" href="layout.html">2</a>
+        <span class="page-numbers current" href="layout2.html">3</span>
+        <a class="page-numbers" href="layout3.html">4</a>
+        <a class="page-numbers" href="responsive.html">5</a>
+        <a class="next page-numbers" href="layout3.html">»</a><!-- 現在の次のページへのリンク -->
+      </div>
+
     </div>
 
     <div class="end">
@@ -376,7 +431,7 @@ article {
         <li><a href="layout3.html">レイアウト3</a></li>
       </ul>
     </div>
-    
+
   </div>
 
 </body>
