--- a/level2/layout3.html
+++ b/level2/layout3.html
@@ -4,15 +4,58 @@
   <meta name="description" content="layout3">
   <meta name="viewport" content="width=device-width">
   <title>レイアウトの種類</title>
-  <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
+  <link rel="stylesheet" media="all" href="../css/style.css">
+  <link href="../code-prettify/prettify.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="../code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </head>
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
+		<div class="header">
+			<div class="cp_navi">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li>
+						<a href="#">初心者編<span class="caret"></span></a>
+						<div>
+							<ul>
+								<li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+								<li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+								<li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+								<li><a href="../level1/css.html">CSSについて</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">中級者編<span class="caret"></span></a>
+						<div>
+							<ul>
+								<li><a href="../level2/design.html">デザインとは</a></li>
+								<li><a href="../level2/layout.html">レイアウト1</a></li>
+								<li><a href="../level2/layout2.html">レイアウト2</a></li>
+								<li><a href="../level2/layout3.html">レイアウト3</a></li>
+								<li><a href="../level2/responsive.html">レスポンシブ</a></li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<a href="#">上級者編<span class="caret"></span></a>
+						<div>
+							<ul>
+								<li><a href="../level3/deploy.html">デプロイ</a></li>
+								<li><a href="../level3/seo.html">SEO</a></li>
+								<li><a href="../level3/marketing.html">マーケティング</a></li>
+								<li><a href="../level3/idea.html">アイデア</a></li>
+								<li><a href="../level3/law.html">法律</a></li>
+								<li><a href="../level3/history.html">歴史</a></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
 
     <div id="sidebar">
       <div id="sidebarWrap">
@@ -29,8 +72,8 @@
               <li><a href="#sec05">スクロール時の動き方</a></li>
             </ul>
             <ul id="sns">
-							<li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-							<li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
+							<li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
+							<li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="../images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
 						</ul>
           </div>
         </nav>
@@ -54,7 +97,7 @@
 				<div class="inner">
 					<ul class="col4">
 						<li>
-							<p class="img"><img src="images\zgata.jpg" width="168" height="168" alt=""></p>
+							<p class="img"><img src="../images\zgata.jpg" width="168" height="168" alt=""></p>
               <h2>◎Z型</h2>
 							<p>横書きで多くの要素が配置されたものを見ると、人は図のように、Zの形で読み進めていきます。
                 このような視線の誘導を「Z型」と呼びます。
@@ -62,14 +105,14 @@
 
 						</li>
 						<li>
-							<p class="img"><img src="images\ngata.jpg" width="168" height="168" alt=""></p>
+							<p class="img"><img src="../images\ngata.jpg" width="168" height="168" alt=""></p>
               <h2>◎N型</h2>
 							<p>次は縦書きの場合です。縦書きでは図のようにNの形で読み進めていきます。
                 このような視線の誘導を「N型」と呼びます。
               </p>
 						</li>
 						<li>
-							<p class="img"><img src="images\fgata.jpg" width="168" height="168" alt=""></p>
+							<p class="img"><img src="../images\fgata.jpg" width="168" height="168" alt=""></p>
               <h2>◎F型</h2>
 							<p>最後に現在最も使われているものを紹介します。それが図のように「F」の形で読み進めていきます。このような視線の誘導をF型と呼びます。
               </p>
@@ -99,7 +142,7 @@
 				</header>
 					<div class="inner">
 						<div class="article">
-							<img src="images\single.jpg" width="370" height="224" alt="">
+							<img src="../images\single.jpg" width="370" height="224" alt="">
 							<p><br><br>左のようにすっきりと縦長に段組みされたレイアウトのことを「シングルカラムレイアウト」といいます。
                 スマートフォンの普及により、近年は余計な情報は表示しない縦長のシングルカラムレイアウトのサイトが増えてきています。
               </p>
@@ -119,11 +162,11 @@
 					<ul class="col7">
 						<li>
 							<p><b>2カラムレイアウト</b></p>
-							<p class="img"><img src="images\2karamu.jpg" width="300" height="200" alt=""></p>
+							<p class="img"><img src="../images\2karamu.jpg" width="300" height="200" alt=""></p>
 						</li>
 						<li>
 							<p><b>3カラムレイアウト</b></p>
-							<p class="img"><img src="images\3karamu.jpg" width="300" height="200" alt=""></p>
+							<p class="img"><img src="../images\3karamu.jpg" width="300" height="200" alt=""></p>
 						</li>
 					</ul>
 					<div class="inner">
@@ -191,6 +234,17 @@ main {
 
 				</div>
 			</section>
+
+			<div class="nav-links">
+				<a class="prev page-numbers" href="layout2.html">«</a><!-- 現在の前のページへのリンク -->
+				<a class="page-numbers" href="design.html">1</a>
+				<a class="page-numbers" href="layout.html">2</a>
+				<a class="page-numbers" href="layout2.html">3</a>
+				<span class="page-numbers current" href="layout3.html">4</span>
+				<a class="page-numbers" href="responsive.html">5</a>
+				<a class="next page-numbers" href="responsive.html">»</a><!-- 現在の次のページへのリンク -->
+			  </div>
+
 
 
 
