--- a/level2/responsive.html
+++ b/level2/responsive.html
@@ -5,128 +5,59 @@
   <meta name="description" content="layout">
   <meta name="viewport" content="width=device-width">
   <title>レスポンシブ</title>
-  <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
+  <link rel="stylesheet" media="all" href="../css/style.css">
+  <link href="../code-prettify/prettify.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="../code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="../js/script.js"></script>
 </head>
-
-<!--
-	gitの使い方：
-  https://gitforwindows.org から install
-  (Windowsの人は)git CMD を開く
-	git config --global user.name "ユーザーネーム"
-	git config --global user.email メールアドレス
-	//上の二つはしてない人だけで良いです。
-  空のフォルダーに移動する。
-  git init
-	git clone https://github.com/Siro3150/How_To.git
-	git branch ブランチ名
-	git checkout ブランチ名
-	編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
-  not upstream が出た時
-  git pull origin
-  git push -u origin ブランチ名
-
-  origin = https://github.com/Siro3150/How_To.git の意味なので２回めからは,
-  省略してoriginと書くことができると思いますが、もしエラーが出た場合は,
-  ちゃんとurlを書いてください。
-
-
-	２回め以降の編集作業
-	git pull https://github.com/Siro3150/How_To.git
-		編集作業
-	git add .
-	git commit -m 'コメントを書く'
-	git push -u origin ブランチ名
-
-	テンプレートの説明：
-	(新しくページを作る時)
-	①ファイル名は小文字英語でメインコンテンツ名.htmlとすること。(seo.html) ファイル位置はとりあえずseo.htmlと同じ階層で。
-	②<meta content="">にファイル名と同じようにメインコンテンツ名を記述する。(例：seo)
-	③良い感じのを<title></title>に書く(例：SEO)
-
-	(コンテンツを追加する時)
-	④サイドバーのリストにコンテンツの名前とhrefにsection番号を新たに加える。(例：sec09)
-	⑤<div id="content"></div>内に以下のプログラムを加えてコンテンを記述。<section id="">に先ほどのリストに書いたsection番号を書く。
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="innerS">
-					<p>導入や思想、そのコンテンツがどのように役に立つかなど(できれば書いて欲しい)</p>
-					<h3>サブタイトル(なくても良い)</h3>
-					<p>説明</p>
-				</div>
-			</section>
-
-	⑥画像を用いて文章を説明したい時、⑤と同様に以下のプログラムを加える。(注：画像リンクはなるべくimagaesフォルダーにまとめること)
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-					<div class="inner">
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>画像の右に表示される</p>
-							<p>画像右下あたりに表示される</p>
-						</div>
-						<div class="article">
-							<img src="画像urlを記入" width="370" height="224" alt="">
-							<p>＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃</p>
-						</div>
-					</div>
-			</section>
-
-
-	⑦画像を横並びに置いてその下に文章を書く場合、⑤と同様に以下のプログラムをコピペする。
-
-
-			<section id="secXX">
-				<header>
-					<h2><span>コンテンツ名</span></h2>
-				</header>
-				<div class="inner">
-					<ul class="col4">
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>画像の真下に表示される文章です</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>たくさんは書けません</p>
-						</li>
-						<li>
-							<p class="img"><img src="url" width="168" height="168" alt=""></p>
-							<p>リストは必要に応じて加えたり減らしたりしてください。</p>
-						</li>
-					</ul>
-				</div>
-			</section>
-
-  ⑧ソースコードを埋め込みたい時
-
-    <pre class="prettyprint linenums">
-      ソースコード
-    </pre>
-
-もっと詳しい説明：
-・全体を大きくheader、content、footerに分かれておりcontentはさらにsectionごとに区切られている。
-・サイドナビゲーションのリンク先をsectionのidに指定することでページ内遷移をしている。
-・<div class="inner">と<div class="innerS">の違いは、innerの方が画像を含めた記事を載せるため横幅が広い。innerSの方は文章のみの説明となるので横幅が狭め
-・cssとjavascriptファイルはあまり気にしなくて良い。
-・後は自由に使いたいとこをコピペしたり、無駄なとこを消したりして使ってください。
- -->
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
+
+    <div class="header">
+      <div class="cp_navi">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">初心者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+                <li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+                <li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+                <li><a href="../level1/css.html">CSSについて</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">中級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level2/design.html">デザインとは</a></li>
+                <li><a href="../level2/layout.html">レイアウト1</a></li>
+                <li><a href="../level2/layout2.html">レイアウト2</a></li>
+                <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/responsive.html">レスポンシブ</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">上級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level3/deploy.html">デプロイ</a></li>
+                <li><a href="../level3/seo.html">SEO</a></li>
+                <li><a href="../level3/marketing.html">マーケティング</a></li>
+                <li><a href="../level3/idea.html">アイデア</a></li>
+                <li><a href="../level3/law.html">法律</a></li>
+                <li><a href="../level3/history.html">歴史</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div id="sidebar">
       <div id="sidebarWrap">
@@ -144,8 +75,8 @@
               <li><a href="#sec06"></a></li>
             </ul>
             <ul id="sns">
-              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
-              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
+              <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
+              <li><a href="https://t.co/PtGWqwsb5g" target="_blank"><img src="../images/iconInsta.png" width="20" height="20" alt="Instagram"></a></li>
             </ul>
           </div>
         </nav>
@@ -269,6 +200,16 @@
           </p>
         </div>
       </section>
+
+      <div class="nav-links">
+        <a class="prev page-numbers" href="layout3.html">«</a><!-- 現在の前のページへのリンク -->
+        <a class="page-numbers" href="design.html">1</a>
+        <a class="page-numbers" href="layout.html">2</a>
+        <a class="page-numbers" href="layout2.html">3</a>
+        <a class="page-numbers" href="layout3.html">4</a>
+        <span class="page-numbers current" href="responsive.html">5</span>
+      </div>
+
 
 
 
